--- a/index.html
+++ b/index.html
@@ -2,88 +2,87 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Uru</title>
+<title>Uru Music</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 body {
   margin: 0;
-  background: #000;
-  color: #e5e5e5;
+  background: #0b0b0b;
+  color: #eaeaea;
   font-family: system-ui, sans-serif;
 }
 
 header {
-  padding: 14px 18px;
-  font-size: 0.9rem;
-  color: #777;
+  padding: 20px;
+  text-align: center;
+  border-bottom: 1px solid #1f1f1f;
 }
 
 main {
-  max-width: 980px;
+  max-width: 900px;
   margin: auto;
-  padding: 10px 18px 40px;
+  padding: 20px;
 }
 
-#now {
-  font-size: 0.75rem;
-  color: #555;
-  margin-bottom: 18px;
+.panel {
+  background: #121212;
+  padding: 18px;
+  border-radius: 14px;
+  text-align: center;
+  margin-bottom: 24px;
+  color: #aaa;
 }
 
-input {
-  width: 100%;
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #222;
-  padding: 10px 2px;
-  color: #999;
-  font-size: 0.85rem;
+.section {
   margin-bottom: 30px;
 }
-input:focus {
-  outline: none;
-  border-color: #444;
+
+.section h2 {
+  font-size: 0.9rem;
+  color: #777;
+  margin-bottom: 12px;
 }
 
-/* AUDIO */
-.audio {
-  margin-bottom: 18px;
+.track {
+  background: #151515;
+  padding: 14px;
+  border-radius: 14px;
+  margin-bottom: 14px;
 }
-.audio-title {
-  font-size: 0.7rem;
-  color: #777;
-  margin-bottom: 4px;
+
+.track-title {
+  font-size: 0.85rem;
+  margin-bottom: 8px;
+  color: #ccc;
 }
+
 audio {
   width: 100%;
 }
 
-/* VIDEO */
-.video {
-  margin-bottom: 40px;
-}
-.video-title {
-  font-size: 0.75rem;
-  color: #666;
-  margin-bottom: 6px;
-}
-video {
+.video-wrap {
+  position: relative;
   width: 100%;
+  padding-top: 56.25%;
+  border-radius: 14px;
+  overflow: hidden;
+  background: #000;
 }
 
-/* SEPARATOR */
-hr {
-  border: none;
-  border-top: 1px solid #111;
-  margin: 50px 0;
+video {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 footer {
   text-align: center;
-  font-size: 0.65rem;
-  color: #444;
-  padding: 40px 0;
+  font-size: 0.75rem;
+  color: #555;
+  padding: 20px;
 }
 </style>
 </head>
@@ -91,114 +90,75 @@ footer {
 <body>
 
 <header>
-  uru / archivo
+  <h1>URU</h1>
+  <p>audio · visual · archivo</p>
 </header>
 
 <main>
 
-<div id="now">—</div>
-
-<input type="text" placeholder="buscar"
-oninput="filter(this.value)">
-
-<!-- AUDIO -->
-<div class="audio" data-name="aceso">
-  <div class="audio-title">aceso</div>
-  <audio controls src="musica/aceso.mp3"></audio>
+<div class="panel" id="now">
+  Selecciona un audio o video
 </div>
 
-<div class="audio" data-name="dd">
-  <div class="audio-title">dd</div>
-  <audio controls src="musica/dd.mp3"></audio>
+<!-- 🎵 AUDIOS -->
+<div class="section">
+<h2>Audio</h2>
+
+<div class="track"><div class="track-title">Aceso</div><audio controls src="musica/aceso.mp3"></audio></div>
+<div class="track"><div class="track-title">DD</div><audio controls src="musica/dd.mp3"></audio></div>
+<div class="track"><div class="track-title">Del</div><audio controls src="musica/del.mp3"></audio></div>
+<div class="track"><div class="track-title">Expancivo</div><audio controls src="musica/expancivo.mp3"></audio></div>
+<div class="track"><div class="track-title">GDS</div><audio controls src="musica/gds.mp3"></audio></div>
+<div class="track"><div class="track-title">Inbi</div><audio controls src="musica/inbi.mp3"></audio></div>
+<div class="track"><div class="track-title">Ind</div><audio controls src="musica/ind.mp3"></audio></div>
+<div class="track"><div class="track-title">Inter</div><audio controls src="musica/inter.mp3"></audio></div>
+<div class="track"><div class="track-title">Mapa</div><audio controls src="musica/mapa.mp3"></audio></div>
+<div class="track"><div class="track-title">Navegar</div><audio controls src="musica/navegar.mp3"></audio></div>
+<div class="track"><div class="track-title">Porr</div><audio controls src="musica/porr.mp3"></audio></div>
+<div class="track"><div class="track-title">Premi</div><audio controls src="musica/premi.mp3"></audio></div>
+<div class="track"><div class="track-title">Rune</div><audio controls src="musica/rune.mp3"></audio></div>
+<div class="track"><div class="track-title">Wera</div><audio controls src="musica/wera.mp3"></audio></div>
+
 </div>
 
-<div class="audio" data-name="del">
-  <div class="audio-title">del</div>
-  <audio controls src="musica/del.mp3"></audio>
+<!-- 🎥 VIDEOS -->
+<div class="section">
+<h2>Visual</h2>
+
+<div class="track">
+  <div class="track-title">Son solo manchas</div>
+  <div class="video-wrap">
+    <video controls src="videos/son_solo_manchas.mp4"></video>
+  </div>
 </div>
 
-<div class="audio" data-name="expancivo">
-  <div class="audio-title">expancivo</div>
-  <audio controls src="musica/expancivo.mp3"></audio>
+<div class="track">
+  <div class="track-title">Ami</div>
+  <div class="video-wrap">
+    <video controls src="videos/ami.mp4"></video>
+  </div>
 </div>
 
-<div class="audio" data-name="gds">
-  <div class="audio-title">gds</div>
-  <audio controls src="musica/gds.mp3"></audio>
+<div class="track">
+  <div class="track-title">Caminar</div>
+  <div class="video-wrap">
+    <video controls src="videos/caminar.mp4"></video>
+  </div>
 </div>
 
-<div class="audio" data-name="inbi">
-  <div class="audio-title">inbi</div>
-  <audio controls src="musica/inbi.mp3"></audio>
+<div class="track">
+  <div class="track-title">Hacia mí</div>
+  <div class="video-wrap">
+    <video controls src="videos/hacia_mi.mp4"></video>
+  </div>
 </div>
 
-<div class="audio" data-name="ind">
-  <div class="audio-title">ind</div>
-  <audio controls src="musica/ind.mp3"></audio>
-</div>
-
-<div class="audio" data-name="inter">
-  <div class="audio-title">inter</div>
-  <audio controls src="musica/inter.mp3"></audio>
-</div>
-
-<div class="audio" data-name="mapa">
-  <div class="audio-title">mapa</div>
-  <audio controls src="musica/mapa.mp3"></audio>
-</div>
-
-<div class="audio" data-name="navegar">
-  <div class="audio-title">navegar</div>
-  <audio controls src="musica/navegar.mp3"></audio>
-</div>
-
-<div class="audio" data-name="porr">
-  <div class="audio-title">porr</div>
-  <audio controls src="musica/porr.mp3"></audio>
-</div>
-
-<div class="audio" data-name="premi">
-  <div class="audio-title">premi</div>
-  <audio controls src="musica/premi.mp3"></audio>
-</div>
-
-<div class="audio" data-name="rune">
-  <div class="audio-title">rune</div>
-  <audio controls src="musica/rune.mp3"></audio>
-</div>
-
-<div class="audio" data-name="wera">
-  <div class="audio-title">wera</div>
-  <audio controls src="musica/wera.mp3"></audio>
-</div>
-
-<hr>
-
-<!-- VIDEO -->
-<div class="video" data-name="son_solo_manchas">
-  <div class="video-title">son solo manchas</div>
-  <video controls src="videos/son_solo_manchas.mp4"></video>
-</div>
-
-<div class="video" data-name="ami">
-  <div class="video-title">ami</div>
-  <video controls src="videos/ami.mp4"></video>
-</div>
-
-<div class="video" data-name="caminar">
-  <div class="video-title">caminar</div>
-  <video controls src="videos/caminar.mp4"></video>
-</div>
-
-<div class="video" data-name="hacia_mi">
-  <div class="video-title">hacia mi</div>
-  <video controls src="videos/hacia_mi.mp4"></video>
 </div>
 
 </main>
 
 <footer>
-uru · 2025
+© 2025 · Uru
 </footer>
 
 <script>
@@ -207,18 +167,11 @@ const media = document.querySelectorAll("audio, video");
 
 media.forEach(el => {
   el.addEventListener("play", () => {
-    media.forEach(m => m !== el && m.pause());
-    const title = el.parentElement.querySelector("div").textContent;
-    now.textContent = title;
+    media.forEach(m => { if (m !== el) m.pause(); });
+    const title = el.closest(".track").querySelector(".track-title").textContent;
+    now.textContent = "Reproduciendo: " + title;
   });
 });
-
-function filter(v) {
-  v = v.toLowerCase();
-  document.querySelectorAll("[data-name]").forEach(e => {
-    e.style.display = e.dataset.name.includes(v) ? "" : "none";
-  });
-}
 </script>
 
 </body>
