--- a/index.html
+++ b/index.html
@@ -2,87 +2,126 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Uru Music</title>
+<title>Uru · Music</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body {
-  margin: 0;
-  background: #0b0b0b;
-  color: #eaeaea;
-  font-family: system-ui, sans-serif;
+:root{
+  --bg:#0b0b0b;
+  --card:#141414;
+  --text:#eaeaea;
+  --muted:#888;
+  --accent:#1db954;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:var(--bg);
+  color:var(--text);
+  font-family:system-ui,-apple-system,BlinkMacSystemFont;
 }
 
-header {
-  padding: 20px;
-  text-align: center;
-  border-bottom: 1px solid #1f1f1f;
+/* HEADER */
+header{
+  position:relative;
+  padding:60px 20px 40px;
+  text-align:center;
+  overflow:hidden;
+}
+header h1{
+  margin:0;
+  font-weight:600;
+  letter-spacing:.6px;
+  z-index:2;
+  position:relative;
+}
+header p{
+  margin-top:8px;
+  color:var(--muted);
+  font-size:.85rem;
+  z-index:2;
+  position:relative;
 }
 
-main {
-  max-width: 900px;
-  margin: auto;
-  padding: 20px;
+/* PORTADA ANIMADA */
+.cover{
+  position:absolute;
+  inset:0;
+  background:
+    radial-gradient(circle at 20% 30%, #1db95433, transparent 40%),
+    radial-gradient(circle at 80% 60%, #ffffff22, transparent 45%);
+  animation: move 12s infinite alternate ease-in-out;
+  filter: blur(40px);
+}
+@keyframes move{
+  from{transform:scale(1) translateY(0)}
+  to{transform:scale(1.2) translateY(-30px)}
 }
 
-.panel {
-  background: #121212;
-  padding: 18px;
-  border-radius: 14px;
-  text-align: center;
-  margin-bottom: 24px;
-  color: #aaa;
+/* MAIN */
+main{
+  max-width:1200px;
+  margin:auto;
+  padding:24px;
+}
+.search{
+  width:100%;
+  padding:14px 16px;
+  border-radius:12px;
+  border:none;
+  background:#1a1a1a;
+  color:#fff;
+  margin-bottom:28px;
 }
 
-.section {
-  margin-bottom: 30px;
+/* CINE */
+#cinema{
+  display:none;
+  margin-bottom:40px;
+}
+#cinema.active{
+  display:block;
+}
+#cinema video{
+  width:100%;
+  max-height:70vh;
+  border-radius:16px;
+  background:black;
 }
 
-.section h2 {
-  font-size: 0.9rem;
-  color: #777;
-  margin-bottom: 12px;
+/* GRID */
+.section{
+  margin:28px 0 12px;
+  font-size:.85rem;
+  color:var(--muted);
+  letter-spacing:.1em;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+  gap:20px;
+}
+.card{
+  background:var(--card);
+  border-radius:14px;
+  padding:14px;
+}
+.title{
+  font-size:.85rem;
+  color:#ccc;
+  margin-bottom:10px;
+}
+audio,video{
+  width:100%;
+  border-radius:10px;
 }
 
-.track {
-  background: #151515;
-  padding: 14px;
-  border-radius: 14px;
-  margin-bottom: 14px;
-}
-
-.track-title {
-  font-size: 0.85rem;
-  margin-bottom: 8px;
-  color: #ccc;
-}
-
-audio {
-  width: 100%;
-}
-
-.video-wrap {
-  position: relative;
-  width: 100%;
-  padding-top: 56.25%;
-  border-radius: 14px;
-  overflow: hidden;
-  background: #000;
-}
-
-video {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-footer {
-  text-align: center;
-  font-size: 0.75rem;
-  color: #555;
-  padding: 20px;
+/* FOOTER */
+footer{
+  text-align:center;
+  padding:30px;
+  font-size:.75rem;
+  color:#666;
 }
 </style>
 </head>
@@ -90,67 +129,84 @@ footer {
 <body>
 
 <header>
-  <h1>URU</h1>
-  <p>audio · visual · archivo</p>
+  <div class="cover"></div>
+  <h1>Uru Music</h1>
+  <p>archivo sonoro · visual</p>
 </header>
 
 <main>
 
-<div class="panel" id="now">
-  Selecciona un audio o video
+<input class="search" placeholder="Buscar audio o video…" oninput="filter(this.value)">
+
+<!-- 🎬 MODO CINE -->
+<div id="cinema"></div>
+
+<div class="section">AUDIOS</div>
+<div class="grid">
+
+<div class="card track" data-name="aceso">
+  <div class="title">Aceso</div>
+  <audio controls src="musica/aceso.mp3"></audio>
 </div>
 
-<!-- 🎵 AUDIOS -->
-<div class="section">
-<h2>Audio</h2>
+<div class="card track" data-name="dd">
+  <div class="title">DD</div>
+  <audio controls src="musica/dd.mp3"></audio>
+</div>
 
-<div class="track"><div class="track-title">Aceso</div><audio controls src="musica/aceso.mp3"></audio></div>
-<div class="track"><div class="track-title">DD</div><audio controls src="musica/dd.mp3"></audio></div>
-<div class="track"><div class="track-title">Del</div><audio controls src="musica/del.mp3"></audio></div>
-<div class="track"><div class="track-title">Expancivo</div><audio controls src="musica/expancivo.mp3"></audio></div>
-<div class="track"><div class="track-title">GDS</div><audio controls src="musica/gds.mp3"></audio></div>
-<div class="track"><div class="track-title">Inbi</div><audio controls src="musica/inbi.mp3"></audio></div>
-<div class="track"><div class="track-title">Ind</div><audio controls src="musica/ind.mp3"></audio></div>
-<div class="track"><div class="track-title">Inter</div><audio controls src="musica/inter.mp3"></audio></div>
-<div class="track"><div class="track-title">Mapa</div><audio controls src="musica/mapa.mp3"></audio></div>
-<div class="track"><div class="track-title">Navegar</div><audio controls src="musica/navegar.mp3"></audio></div>
-<div class="track"><div class="track-title">Porr</div><audio controls src="musica/porr.mp3"></audio></div>
-<div class="track"><div class="track-title">Premi</div><audio controls src="musica/premi.mp3"></audio></div>
-<div class="track"><div class="track-title">Rune</div><audio controls src="musica/rune.mp3"></audio></div>
-<div class="track"><div class="track-title">Wera</div><audio controls src="musica/wera.mp3"></audio></div>
+<div class="card track" data-name="del">
+  <div class="title">Del</div>
+  <audio controls src="musica/del.mp3"></audio>
+</div>
+
+<div class="card track" data-name="expancivo">
+  <div class="title">Expancivo</div>
+  <audio controls src="musica/expancivo.mp3"></audio>
+</div>
+
+<div class="card track" data-name="gds">
+  <div class="title">GDS</div>
+  <audio controls src="musica/gds.mp3"></audio>
+</div>
+
+<div class="card track" data-name="premi">
+  <div class="title">Premi</div>
+  <audio controls src="musica/premi.mp3"></audio>
+</div>
+
+<div class="card track" data-name="rune">
+  <div class="title">Rune</div>
+  <audio controls src="musica/rune.mp3"></audio>
+</div>
+
+<div class="card track" data-name="wera">
+  <div class="title">Wera</div>
+  <audio controls src="musica/wera.mp3"></audio>
+</div>
 
 </div>
 
-<!-- 🎥 VIDEOS -->
-<div class="section">
-<h2>Visual</h2>
+<div class="section">VIDEOS</div>
+<div class="grid">
 
-<div class="track">
-  <div class="track-title">Son solo manchas</div>
-  <div class="video-wrap">
-    <video controls src="videos/son_solo_manchas.mp4"></video>
-  </div>
+<div class="card track" data-name="son solo manchas">
+  <div class="title">Son solo manchas</div>
+  <video controls src="videos/Sonsolomanchas.mp4"></video>
 </div>
 
-<div class="track">
-  <div class="track-title">Ami</div>
-  <div class="video-wrap">
-    <video controls src="videos/ami.mp4"></video>
-  </div>
+<div class="card track" data-name="ami">
+  <div class="title">Ami</div>
+  <video controls src="videos/ami.mp4"></video>
 </div>
 
-<div class="track">
-  <div class="track-title">Caminar</div>
-  <div class="video-wrap">
-    <video controls src="videos/caminar.mp4"></video>
-  </div>
+<div class="card track" data-name="caminar">
+  <div class="title">Caminar</div>
+  <video controls src="videos/caminar.mp4"></video>
 </div>
 
-<div class="track">
-  <div class="track-title">Hacia mí</div>
-  <div class="video-wrap">
-    <video controls src="videos/hacia_mi.mp4"></video>
-  </div>
+<div class="card track" data-name="hacia mi">
+  <div class="title">Hacia mí</div>
+  <video controls src="videos/haciami.mp4"></video>
 </div>
 
 </div>
@@ -158,20 +214,41 @@ footer {
 </main>
 
 <footer>
-© 2025 · Uru
+© 2025 · Uru Music
 </footer>
 
 <script>
-const now = document.getElementById("now");
 const media = document.querySelectorAll("audio, video");
+const cinema = document.getElementById("cinema");
 
-media.forEach(el => {
-  el.addEventListener("play", () => {
-    media.forEach(m => { if (m !== el) m.pause(); });
-    const title = el.closest(".track").querySelector(".track-title").textContent;
-    now.textContent = "Reproduciendo: " + title;
+media.forEach(m=>{
+  m.addEventListener("play",()=>{
+    media.forEach(o=>{ if(o!==m) o.pause(); });
+
+    if(m.tagName==="VIDEO"){
+      cinema.innerHTML="";
+      const clone = m.cloneNode(true);
+      clone.controls = true;
+      clone.autoplay = true;
+      cinema.appendChild(clone);
+      cinema.classList.add("active");
+    }
+  });
+
+  m.addEventListener("pause",()=>{
+    if(m.tagName==="VIDEO"){
+      cinema.classList.remove("active");
+      cinema.innerHTML="";
+    }
   });
 });
+
+function filter(value){
+  value=value.toLowerCase();
+  document.querySelectorAll(".track").forEach(t=>{
+    t.style.display = t.dataset.name.includes(value) ? "block":"none";
+  });
+}
 </script>
 
 </body>
