--- a/index.html
+++ b/index.html
@@ -1,254 +1,218 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Uru · Music</title>
+<meta charset="utf-8">
+<title>uru — music & video</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 :root{
-  --bg:#0b0b0b;
-  --card:#141414;
-  --text:#eaeaea;
-  --muted:#888;
-  --accent:#1db954;
+  --bg:#0e0e0f;
+  --card:#18181b;
+  --soft:#232326;
+  --txt:#e5e7eb;
+  --muted:#9ca3af;
+  --accent:#22d3ee;
 }
+
 *{box-sizing:border-box}
 body{
   margin:0;
-  background:var(--bg);
-  color:var(--text);
-  font-family:system-ui,-apple-system,BlinkMacSystemFont;
+  font-family:system-ui, -apple-system, Segoe UI, Roboto;
+  background:radial-gradient(circle at top,#111 0%,#000 70%);
+  color:var(--txt);
 }
 
-/* HEADER */
+/* header */
 header{
-  position:relative;
-  padding:60px 20px 40px;
-  text-align:center;
-  overflow:hidden;
+  position:sticky;
+  top:0;
+  z-index:10;
+  backdrop-filter:blur(14px);
+  background:rgba(0,0,0,.55);
+  padding:14px 20px;
+  display:flex;
+  gap:14px;
+  align-items:center;
 }
 header h1{
-  margin:0;
+  font-size:16px;
   font-weight:600;
-  letter-spacing:.6px;
-  z-index:2;
-  position:relative;
+  letter-spacing:.5px;
+  margin:0;
 }
-header p{
-  margin-top:8px;
-  color:var(--muted);
-  font-size:.85rem;
-  z-index:2;
-  position:relative;
-}
-
-/* PORTADA ANIMADA */
-.cover{
-  position:absolute;
-  inset:0;
-  background:
-    radial-gradient(circle at 20% 30%, #1db95433, transparent 40%),
-    radial-gradient(circle at 80% 60%, #ffffff22, transparent 45%);
-  animation: move 12s infinite alternate ease-in-out;
-  filter: blur(40px);
-}
-@keyframes move{
-  from{transform:scale(1) translateY(0)}
-  to{transform:scale(1.2) translateY(-30px)}
-}
-
-/* MAIN */
-main{
-  max-width:1200px;
-  margin:auto;
-  padding:24px;
-}
-.search{
-  width:100%;
-  padding:14px 16px;
-  border-radius:12px;
+header input{
+  flex:1;
+  background:var(--soft);
   border:none;
-  background:#1a1a1a;
-  color:#fff;
-  margin-bottom:28px;
+  color:var(--txt);
+  padding:10px 14px;
+  border-radius:999px;
+  outline:none;
 }
 
-/* CINE */
-#cinema{
-  display:none;
-  margin-bottom:40px;
-}
-#cinema.active{
-  display:block;
-}
-#cinema video{
-  width:100%;
-  max-height:70vh;
-  border-radius:16px;
-  background:black;
-}
-
-/* GRID */
-.section{
-  margin:28px 0 12px;
-  font-size:.85rem;
-  color:var(--muted);
-  letter-spacing:.1em;
-}
-.grid{
+/* grid */
+main{
+  padding:22px;
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
-  gap:20px;
-}
-.card{
-  background:var(--card);
-  border-radius:14px;
-  padding:14px;
-}
-.title{
-  font-size:.85rem;
-  color:#ccc;
-  margin-bottom:10px;
-}
-audio,video{
-  width:100%;
-  border-radius:10px;
+  grid-template-columns:repeat(auto-fill,minmax(320px,1fr));
+  gap:22px;
 }
 
-/* FOOTER */
-footer{
-  text-align:center;
-  padding:30px;
-  font-size:.75rem;
-  color:#666;
+/* card */
+.card{
+  background:linear-gradient(180deg,#1b1b1f,#111);
+  border-radius:18px;
+  padding:14px;
+  box-shadow:0 20px 60px rgba(0,0,0,.6);
+  transition:.3s;
 }
+.card:hover{transform:translateY(-4px)}
+
+.title{
+  font-size:14px;
+  margin-bottom:10px;
+  color:#f9fafb;
+}
+
+/* portada animada */
+.cover{
+  position:relative;
+  aspect-ratio:16/9;
+  border-radius:14px;
+  overflow:hidden;
+  background:
+    linear-gradient(120deg,#222,#111,#222);
+}
+.cover::before{
+  content:"";
+  position:absolute;
+  inset:-40%;
+  background:conic-gradient(
+    from 0deg,
+    transparent,
+    rgba(34,211,238,.35),
+    transparent 40%
+  );
+  animation:spin 10s linear infinite;
+}
+@keyframes spin{
+  to{transform:rotate(360deg)}
+}
+
+/* players */
+video,audio{
+  width:100%;
+  margin-top:10px;
+  border-radius:12px;
+  background:#000;
+}
+
+/* modo cine */
+.cinema{
+  position:fixed;
+  inset:0;
+  background:#000;
+  z-index:999;
+  padding:20px;
+}
+.cinema video{
+  width:100%;
+  height:100%;
+}
+
+/* button */
+.btn{
+  margin-top:8px;
+  background:transparent;
+  border:1px solid var(--soft);
+  color:var(--muted);
+  padding:6px 10px;
+  border-radius:999px;
+  font-size:12px;
+  cursor:pointer;
+}
+.btn:hover{border-color:var(--accent);color:var(--accent)}
 </style>
 </head>
 
 <body>
 
 <header>
-  <div class="cover"></div>
-  <h1>Uru Music</h1>
-  <p>archivo sonoro · visual</p>
+  <h1>uru</h1>
+  <input id="search" placeholder="Buscar música o video…">
 </header>
 
-<main>
+<main id="grid">
 
-<input class="search" placeholder="Buscar audio o video…" oninput="filter(this.value)">
+  <!-- VIDEOS -->
+  <section class="card" data-name="ami">
+    <div class="title">Ami</div>
+    <div class="cover"></div>
+    <video src="videos/ami.mp4" controls playsinline></video>
+  </section>
 
-<!-- 🎬 MODO CINE -->
-<div id="cinema"></div>
+  <section class="card" data-name="caminar">
+    <div class="title">Caminar</div>
+    <div class="cover"></div>
+    <video src="videos/caminar.mp4" controls playsinline></video>
+  </section>
 
-<div class="section">AUDIOS</div>
-<div class="grid">
+  <section class="card" data-name="enmi">
+    <div class="title">Enmí</div>
+    <div class="cover"></div>
+    <video src="videos/enmi.mp4" controls playsinline></video>
+  </section>
 
-<div class="card track" data-name="aceso">
-  <div class="title">Aceso</div>
-  <audio controls src="musica/aceso.mp3"></audio>
-</div>
+  <section class="card" data-name="envidia">
+    <div class="title">Envidia</div>
+    <div class="cover"></div>
+    <video src="videos/envidi.mp4" controls playsinline></video>
+  </section>
 
-<div class="card track" data-name="dd">
-  <div class="title">DD</div>
-  <audio controls src="musica/dd.mp3"></audio>
-</div>
+  <!-- AUDIO -->
+  <section class="card" data-name="acceso">
+    <div class="title">Acceso</div>
+    <audio src="audio/acceso.mp3" controls></audio>
+  </section>
 
-<div class="card track" data-name="del">
-  <div class="title">Del</div>
-  <audio controls src="musica/del.mp3"></audio>
-</div>
+  <section class="card" data-name="navegar">
+    <div class="title">Navegar</div>
+    <audio src="audio/navegar.mp3" controls></audio>
+  </section>
 
-<div class="card track" data-name="expancivo">
-  <div class="title">Expancivo</div>
-  <audio controls src="musica/expancivo.mp3"></audio>
-</div>
-
-<div class="card track" data-name="gds">
-  <div class="title">GDS</div>
-  <audio controls src="musica/gds.mp3"></audio>
-</div>
-
-<div class="card track" data-name="premi">
-  <div class="title">Premi</div>
-  <audio controls src="musica/premi.mp3"></audio>
-</div>
-
-<div class="card track" data-name="rune">
-  <div class="title">Rune</div>
-  <audio controls src="musica/rune.mp3"></audio>
-</div>
-
-<div class="card track" data-name="wera">
-  <div class="title">Wera</div>
-  <audio controls src="musica/wera.mp3"></audio>
-</div>
-
-</div>
-
-<div class="section">VIDEOS</div>
-<div class="grid">
-
-<div class="card track" data-name="son solo manchas">
-  <div class="title">Son solo manchas</div>
-  <video controls src="videos/Sonsolomanchas.mp4"></video>
-</div>
-
-<div class="card track" data-name="ami">
-  <div class="title">Ami</div>
-  <video controls src="videos/ami.mp4"></video>
-</div>
-
-<div class="card track" data-name="caminar">
-  <div class="title">Caminar</div>
-  <video controls src="videos/caminar.mp4"></video>
-</div>
-
-<div class="card track" data-name="hacia mi">
-  <div class="title">Hacia mí</div>
-  <video controls src="videos/haciami.mp4"></video>
-</div>
-
-</div>
+  <section class="card" data-name="rune">
+    <div class="title">Rune</div>
+    <audio src="audio/rune.mp3" controls></audio>
+  </section>
 
 </main>
 
-<footer>
-© 2025 · Uru Music
-</footer>
-
 <script>
-const media = document.querySelectorAll("audio, video");
-const cinema = document.getElementById("cinema");
+/* buscador */
+const search=document.getElementById('search');
+const cards=[...document.querySelectorAll('.card')];
 
-media.forEach(m=>{
-  m.addEventListener("play",()=>{
-    media.forEach(o=>{ if(o!==m) o.pause(); });
-
-    if(m.tagName==="VIDEO"){
-      cinema.innerHTML="";
-      const clone = m.cloneNode(true);
-      clone.controls = true;
-      clone.autoplay = true;
-      cinema.appendChild(clone);
-      cinema.classList.add("active");
-    }
-  });
-
-  m.addEventListener("pause",()=>{
-    if(m.tagName==="VIDEO"){
-      cinema.classList.remove("active");
-      cinema.innerHTML="";
-    }
+search.addEventListener('input',()=>{
+  const q=search.value.toLowerCase();
+  cards.forEach(c=>{
+    c.style.display=c.dataset.name.includes(q)?'':'none';
   });
 });
 
-function filter(value){
-  value=value.toLowerCase();
-  document.querySelectorAll(".track").forEach(t=>{
-    t.style.display = t.dataset.name.includes(value) ? "block":"none";
+/* modo cine */
+document.querySelectorAll('video').forEach(v=>{
+  v.addEventListener('dblclick',()=>{
+    const wrap=document.createElement('div');
+    wrap.className='cinema';
+    const clone=v.cloneNode(true);
+    clone.controls=true;
+    clone.play();
+    wrap.appendChild(clone);
+    wrap.onclick=()=>wrap.remove();
+    document.body.appendChild(wrap);
   });
-}
+});
 </script>
 
 </body>
