--- a/index.html
+++ b/index.html
@@ -1,218 +1,270 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<title>uru — music & video</title>
+<meta charset="UTF-8">
+<title>URU · Music</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 :root{
-  --bg:#0e0e0f;
-  --card:#18181b;
-  --soft:#232326;
-  --txt:#e5e7eb;
-  --muted:#9ca3af;
-  --accent:#22d3ee;
+  --bg:#0b0b0b;
+  --panel:#141414;
+  --card:#1c1c1c;
+  --text:#eaeaea;
+  --muted:#9a9a9a;
+  --accent:#1db954;
 }
 
 *{box-sizing:border-box}
+
 body{
   margin:0;
-  font-family:system-ui, -apple-system, Segoe UI, Roboto;
-  background:radial-gradient(circle at top,#111 0%,#000 70%);
-  color:var(--txt);
+  background:linear-gradient(180deg,#0b0b0b,#050505);
+  color:var(--text);
+  font-family:system-ui,-apple-system,Segoe UI,Roboto;
 }
 
-/* header */
+/* HEADER */
 header{
-  position:sticky;
-  top:0;
-  z-index:10;
-  backdrop-filter:blur(14px);
-  background:rgba(0,0,0,.55);
-  padding:14px 20px;
+  padding:18px 22px;
   display:flex;
-  gap:14px;
   align-items:center;
+  justify-content:space-between;
+  border-bottom:1px solid #1f1f1f;
 }
+
 header h1{
-  font-size:16px;
+  font-size:1.1rem;
+  letter-spacing:2px;
   font-weight:600;
-  letter-spacing:.5px;
-  margin:0;
 }
-header input{
-  flex:1;
-  background:var(--soft);
+
+/* SEARCH */
+.search{
+  width:100%;
+  margin:20px auto;
+  max-width:900px;
+  padding:14px 16px;
+  border-radius:999px;
   border:none;
-  color:var(--txt);
-  padding:10px 14px;
-  border-radius:999px;
   outline:none;
+  background:#1a1a1a;
+  color:#fff;
+  font-size:0.9rem;
 }
 
-/* grid */
+/* GRID */
 main{
-  padding:22px;
+  max-width:1100px;
+  margin:auto;
+  padding:0 16px 60px;
+}
+
+.grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(320px,1fr));
-  gap:22px;
+  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+  gap:16px;
 }
 
-/* card */
+/* CARD */
 .card{
-  background:linear-gradient(180deg,#1b1b1f,#111);
-  border-radius:18px;
-  padding:14px;
-  box-shadow:0 20px 60px rgba(0,0,0,.6);
-  transition:.3s;
-}
-.card:hover{transform:translateY(-4px)}
-
-.title{
-  font-size:14px;
-  margin-bottom:10px;
-  color:#f9fafb;
-}
-
-/* portada animada */
-.cover{
-  position:relative;
-  aspect-ratio:16/9;
+  background:var(--card);
   border-radius:14px;
-  overflow:hidden;
-  background:
-    linear-gradient(120deg,#222,#111,#222);
-}
-.cover::before{
-  content:"";
-  position:absolute;
-  inset:-40%;
-  background:conic-gradient(
-    from 0deg,
-    transparent,
-    rgba(34,211,238,.35),
-    transparent 40%
-  );
-  animation:spin 10s linear infinite;
-}
-@keyframes spin{
-  to{transform:rotate(360deg)}
+  padding:12px;
+  transition:.2s;
 }
 
-/* players */
-video,audio{
+.card:hover{
+  background:#222;
+}
+
+/* TITLE */
+.title{
+  font-size:0.85rem;
+  color:#ddd;
+  margin-bottom:8px;
+}
+
+/* MEDIA */
+audio,video{
   width:100%;
-  margin-top:10px;
-  border-radius:12px;
+  border-radius:10px;
   background:#000;
 }
 
-/* modo cine */
-.cinema{
-  position:fixed;
-  inset:0;
-  background:#000;
-  z-index:999;
-  padding:20px;
-}
+/* CINEMA MODE */
 .cinema video{
-  width:100%;
-  height:100%;
+  aspect-ratio:16/9;
 }
 
-/* button */
-.btn{
-  margin-top:8px;
-  background:transparent;
-  border:1px solid var(--soft);
-  color:var(--muted);
-  padding:6px 10px;
-  border-radius:999px;
-  font-size:12px;
-  cursor:pointer;
+/* FOOTER */
+footer{
+  text-align:center;
+  color:#666;
+  font-size:.75rem;
+  padding:24px;
 }
-.btn:hover{border-color:var(--accent);color:var(--accent)}
+
+/* ANIMATED COVER (MONO) */
+.cover{
+  height:120px;
+  border-radius:12px;
+  background:
+    radial-gradient(circle at 30% 30%, #1db95433, transparent 60%),
+    radial-gradient(circle at 70% 70%, #ffffff22, transparent 60%),
+    #121212;
+  animation:pulse 6s infinite alternate;
+  margin-bottom:10px;
+}
+
+@keyframes pulse{
+  from{filter:brightness(1)}
+  to{filter:brightness(1.3)}
+}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>uru</h1>
-  <input id="search" placeholder="Buscar música o video…">
+  <h1>URU</h1>
 </header>
 
-<main id="grid">
+<main>
 
-  <!-- VIDEOS -->
-  <section class="card" data-name="ami">
-    <div class="title">Ami</div>
+<input class="search" placeholder="Buscar audio o video…"
+oninput="filterMedia(this.value)">
+
+<div class="grid" id="grid">
+
+  <!-- 🎵 AUDIOS -->
+  <div class="card" data-name="aceso">
     <div class="cover"></div>
-    <video src="videos/ami.mp4" controls playsinline></video>
-  </section>
+    <div class="title">Aceso</div>
+    <audio controls src="audio/aceso.mp3"></audio>
+  </div>
 
-  <section class="card" data-name="caminar">
-    <div class="title">Caminar</div>
+  <div class="card" data-name="dd">
     <div class="cover"></div>
-    <video src="videos/caminar.mp4" controls playsinline></video>
-  </section>
+    <div class="title">DD</div>
+    <audio controls src="audio/dd.mp3"></audio>
+  </div>
 
-  <section class="card" data-name="enmi">
-    <div class="title">Enmí</div>
+  <div class="card" data-name="del">
     <div class="cover"></div>
-    <video src="videos/enmi.mp4" controls playsinline></video>
-  </section>
+    <div class="title">Del</div>
+    <audio controls src="audio/del.mp3"></audio>
+  </div>
 
-  <section class="card" data-name="envidia">
-    <div class="title">Envidia</div>
+  <div class="card" data-name="expancivo">
     <div class="cover"></div>
-    <video src="videos/envidi.mp4" controls playsinline></video>
-  </section>
+    <div class="title">Expancivo</div>
+    <audio controls src="audio/expancivo.mp3"></audio>
+  </div>
 
-  <!-- AUDIO -->
-  <section class="card" data-name="acceso">
-    <div class="title">Acceso</div>
-    <audio src="audio/acceso.mp3" controls></audio>
-  </section>
+  <div class="card" data-name="gds">
+    <div class="cover"></div>
+    <div class="title">GDS</div>
+    <audio controls src="audio/gds.mp3"></audio>
+  </div>
 
-  <section class="card" data-name="navegar">
+  <div class="card" data-name="inbi">
+    <div class="cover"></div>
+    <div class="title">Inbi</div>
+    <audio controls src="audio/inbi.mp3"></audio>
+  </div>
+
+  <div class="card" data-name="ind">
+    <div class="cover"></div>
+    <div class="title">Ind</div>
+    <audio controls src="audio/ind.mp3"></audio>
+  </div>
+
+  <div class="card" data-name="inter">
+    <div class="cover"></div>
+    <div class="title">Inter</div>
+    <audio controls src="audio/inter.mp3"></audio>
+  </div>
+
+  <div class="card" data-name="mapa">
+    <div class="cover"></div>
+    <div class="title">Mapa</div>
+    <audio controls src="audio/mapa.mp3"></audio>
+  </div>
+
+  <div class="card" data-name="navegar">
+    <div class="cover"></div>
     <div class="title">Navegar</div>
-    <audio src="audio/navegar.mp3" controls></audio>
-  </section>
+    <audio controls src="audio/navegar.mp3"></audio>
+  </div>
 
-  <section class="card" data-name="rune">
+  <div class="card" data-name="porr">
+    <div class="cover"></div>
+    <div class="title">Porr</div>
+    <audio controls src="audio/porr.mp3"></audio>
+  </div>
+
+  <div class="card" data-name="premi">
+    <div class="cover"></div>
+    <div class="title">Premi</div>
+    <audio controls src="audio/premi.mp3"></audio>
+  </div>
+
+  <div class="card" data-name="rune">
+    <div class="cover"></div>
     <div class="title">Rune</div>
-    <audio src="audio/rune.mp3" controls></audio>
-  </section>
+    <audio controls src="audio/rune.mp3"></audio>
+  </div>
 
+  <div class="card" data-name="wera">
+    <div class="cover"></div>
+    <div class="title">Wera</div>
+    <audio controls src="audio/wera.mp3"></audio>
+  </div>
+
+  <!-- 🎥 VIDEOS -->
+  <div class="card cinema" data-name="ami">
+    <div class="title">Ami</div>
+    <video controls src="videos/ami.mp4"></video>
+  </div>
+
+  <div class="card cinema" data-name="caminar">
+    <div class="title">Caminar</div>
+    <video controls src="videos/caminar.mp4"></video>
+  </div>
+
+  <div class="card cinema" data-name="enmi">
+    <div class="title">Enmi</div>
+    <video controls src="videos/enmi.mp4"></video>
+  </div>
+
+  <div class="card cinema" data-name="envidi">
+    <div class="title">Envidi</div>
+    <video controls src="videos/envidi.mp4"></video>
+  </div>
+
+</div>
 </main>
 
+<footer>
+© 2025 · URU
+</footer>
+
 <script>
-/* buscador */
-const search=document.getElementById('search');
-const cards=[...document.querySelectorAll('.card')];
+const media = document.querySelectorAll("audio, video");
 
-search.addEventListener('input',()=>{
-  const q=search.value.toLowerCase();
-  cards.forEach(c=>{
-    c.style.display=c.dataset.name.includes(q)?'':'none';
+media.forEach(m=>{
+  m.addEventListener("play",()=>{
+    media.forEach(o=>{ if(o!==m) o.pause(); });
   });
 });
 
-/* modo cine */
-document.querySelectorAll('video').forEach(v=>{
-  v.addEventListener('dblclick',()=>{
-    const wrap=document.createElement('div');
-    wrap.className='cinema';
-    const clone=v.cloneNode(true);
-    clone.controls=true;
-    clone.play();
-    wrap.appendChild(clone);
-    wrap.onclick=()=>wrap.remove();
-    document.body.appendChild(wrap);
+function filterMedia(value){
+  value=value.toLowerCase();
+  document.querySelectorAll(".card").forEach(c=>{
+    c.style.display = c.dataset.name.includes(value) ? "block" : "none";
   });
-});
+}
 </script>
 
 </body>
