--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   --muted:#9a9a9a;
   --accent:#1db954;
 }
-
 *{box-sizing:border-box}
-
 body{
   margin:0;
   font-family:system-ui,Segoe UI,Roboto;
@@ -46,14 +44,12 @@ header{
   border-right:1px solid #111;
   overflow-y:auto;
 }
-
 .section{
   padding:10px 14px;
   font-size:.7rem;
   color:var(--muted);
   letter-spacing:1px;
 }
-
 .item{
   padding:10px 14px;
   cursor:pointer;
@@ -61,7 +57,6 @@ header{
   color:#ddd;
   transition:.2s;
 }
-
 .item:hover,
 .item.active{
   background:#1a1a1a;
@@ -74,7 +69,6 @@ header{
   flex-direction:column;
   background:#000;
 }
-
 .stage{
   flex:1;
   display:flex;
@@ -82,16 +76,13 @@ header{
   justify-content:center;
   background:#000;
 }
-
 video{
   max-width:100%;
   max-height:100%;
 }
-
 audio{
   width:90%;
 }
-
 .info{
   padding:10px 14px;
   font-size:.85rem;
@@ -100,17 +91,41 @@ audio{
 
 /* MOBILE */
 @media(max-width:800px){
-  .app{
-    grid-template-columns:1fr;
-  }
+  .app{grid-template-columns:1fr}
   .sidebar{
     height:40%;
     border-right:none;
     border-bottom:1px solid #111;
   }
-  audio{
-    width:100%;
-  }
+  audio{width:100%}
+}
+
+/* ===== MODO CINE ===== */
+.cinema .sidebar{display:none}
+.cinema .app{grid-template-columns:1fr}
+.cinema .stage{background:#000}
+.cinema video{
+  width:100%;
+  height:100%;
+  max-width:100vw;
+  max-height:100vh;
+}
+.cinema-toggle{
+  position:fixed;
+  bottom:16px;
+  right:16px;
+  background:#111;
+  color:#fff;
+  border:1px solid #222;
+  padding:10px 14px;
+  border-radius:999px;
+  cursor:pointer;
+  z-index:999;
+  font-size:.85rem;
+}
+.cinema-toggle:hover{
+  background:var(--accent);
+  color:#000;
 }
 </style>
 </head>
@@ -123,7 +138,6 @@ audio{
 
   <!-- LISTA -->
   <aside class="sidebar">
-
     <div class="section">🎵 AUDIOS</div>
     <div class="item" onclick="playAudio('Aceso','audio/aceso.mp3',event)">Aceso</div>
     <div class="item" onclick="playAudio('DD','audio/dd.mp3',event)">DD</div>
@@ -148,7 +162,6 @@ audio{
     <div class="item" onclick="playVideo('Envidi','videos/envidi.mp4',event)">Envidi</div>
     <div class="item" onclick="playVideo('Mejura','videos/mejura.mp4',event)">Mejura</div>
     <div class="item" onclick="playVideo('Song','videos/song.mp4',event)">Song</div>
-
   </aside>
 
   <!-- PLAYER -->
@@ -160,6 +173,8 @@ audio{
   </main>
 
 </div>
+
+<button class="cinema-toggle" onclick="toggleCinema()">🎬 Modo Cine</button>
 
 <script>
 const stage=document.getElementById('stage');
@@ -182,6 +197,10 @@ function playVideo(name,src,e){
   e.target.classList.add('active');
   stage.innerHTML=`<video src="${src}" controls autoplay></video>`;
   info.textContent="🎥 "+name;
+}
+
+function toggleCinema(){
+  document.body.classList.toggle('cinema');
 }
 </script>
 
